java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateField1-hints.pass
Create Field test in org.netbeans.test.java.hints.CreateField1
Create Parameter test
Create Local Variable test
